[workspace]
members = [ "listings/ch01-GettingStarted/created_with_cargo", "listings/ch02-guessing-game-tutorial/listing-02-01-noexpect", "listings/ch02-guessing-game-tutorial/listing-02-01-nouse","packages/*"]
default-members = ["packages/*"]
resolver = "2"
exclude = [
    "linkchecker", # linkchecker is part of the CI workflow
    "listings",    # these are intentionally distinct from the workspace
]

[workspace.dependencies]
walkdir = "2.3.1"
docopt = "1.1.0"
mdbook = "0.4.37"
serde = "1.0"
regex = "1.3.3"
lazy_static = "1.4.0"
flate2 = "1.0.13"
tar = "0.4.26"
